<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/blackscreen"
        tools:ignore="ContentDescription" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/button7"
            android:textSize="@dimen/button_text"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/button8"
            android:textSize="@dimen/button_text"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/button9"
            android:textSize="@dimen/button_text"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_grey"
            android:text="@string/buttonDivide"
            android:textSize="@dimen/button_text"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/button4"
            android:textSize="@dimen/button_text"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/button5"
            android:textSize="@dimen/button_text"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/button6"
            android:textSize="@dimen/button_text"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/buttonMultiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_grey"
            android:text="@string/buttonMultiple"
            android:textSize="@dimen/button_text"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/button1"
            android:textSize="@dimen/button_text"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/button2"
            android:textSize="@dimen/button_text"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/button3"
            android:textSize="@dimen/button_text"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_grey"
            android:text="@string/buttonMinus"
            android:textSize="@dimen/button_text"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/buttonDot"
            android:textSize="@dimen/button_text"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/button0"
            android:textSize="@dimen/button_text"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/buttonEquals"
            android:textSize="@dimen/button_text"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_grey"
            android:text="@string/buttonPlus"
            android:textSize="@dimen/button_text"
            app:cornerRadius="@dimen/button_corner_radius" />

    </GridLayout>

    <TextView
        android:id="@+id/calcWindow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/button_text"/>

</FrameLayout>